ProFit Event App/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Event_End_Date_Time__c</fullName>
        <description>Event Ending Date &amp; Time</description>
        <label>Event End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Organizer</description>
        <label>Event Organizer</label>
        <referenceTo>Event_Organizer__c</referenceTo>
        <relationshipLabel>Event List</relationshipLabel>
        <relationshipName>Event_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date_Time__c</fullName>
        <description>Starting Date &amp; Time of Event</description>
        <label>Event Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Current Status of the Event</description>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Event Attendance Type</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of the Event</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the event will be streamed online</description>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Location</description>
        <label>Location List</label>
        <referenceTo>Location_List__c</referenceTo>
        <relationshipLabel>Event List</relationshipLabel>
        <relationshipName>Event_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Verified__c</fullName>
        <formula>Location_List__r.Verified_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <description>Maximum Available Seats for the Event</description>
        <label>Max Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Event Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the event will be repeated</description>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Seats__c</fullName>
        <description>Remaining Number of Seats to the Event</description>
        <formula>Max_Seats__c  -  of_People_Attending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF( ISPICKVAL( Event_Status__c , &apos;Deleted&apos;) , (IMAGE(&quot;https://www.pngitem.com/pimgs/m/508-5080910_red-flag-red-flag-waving-gif-hd-png.png&quot;,&quot;Red Flag&quot;, 44,55)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Flagged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_People_Attending__c</fullName>
        <description>Number of People Attending the Event</description>
        <label># of People Attending</label>
        <summaryForeignKey>Event_Attendee__c.Event_List__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Event List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <columns>Event_End_Date_Time__c</columns>
        <columns>Live__c</columns>
        <columns>Remaining_Seats__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Event #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event List</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_date_must_be_1_day_ahead_of_Start</fullName>
        <active>true</active>
        <description>The Event End Date and Time must be 1 day apart from the Event Start Date and Time</description>
        <errorConditionFormula>AND( DATEVALUE(Event_End_Date_Time__c)&lt; (DATEVALUE(Event_Start_Date_Time__c)+1), NOT(ISNULL(Event_End_Date_Time__c)))</errorConditionFormula>
        <errorDisplayField>Event_End_Date_Time__c</errorDisplayField>
        <errorMessage>End Date and Start Date must be 1 day apart</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>In_Person_Event</fullName>
        <active>true</active>
        <description>Attendees must select a location for In-Person events</description>
        <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &apos;In-person&apos;) ,   (ISBLANK(Location_List__c ) ) )</errorConditionFormula>
        <errorDisplayField>Location_List__c</errorDisplayField>
        <errorMessage>Please select a location for In-Person Events</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_Requirements</fullName>
        <active>true</active>
        <description>Frequency field requirement</description>
        <errorConditionFormula>OR(AND(Recurring__c = TRUE, ISBLANK( TEXT( Frequency__c ))),AND(Recurring__c  = FALSE , NOT(ISBLANK( TEXT( Frequency__c )))))</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>This is a recurring event. Please update the event frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Virtual_Event</fullName>
        <active>true</active>
        <description>If the event is virtual, attendees cannot select a location</description>
        <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &apos;Virtual&apos;) ,   NOT(ISBLANK(Location_List__c ) ) )</errorConditionFormula>
        <errorDisplayField>Location_List__c</errorDisplayField>
        <errorMessage>Event is Virtual</errorMessage>
    </validationRules>
</CustomObject>